@@ -1,10 +1,11 @@
 
 Version 1.0ea9 - ...
 
+- parse tree in debugger shows backtrack nodes (colorized)
 - can now export decision DFA and rule dependency graph as DOT file
 - new replace all feature in find dialog
 - generated code coloring has been disabled
-- auto-save document before parser code generation
+- auto-save document before debugging and generating code for display
 - generate parser if document has been modified since last generation
 - more precise message when log are reported to the console (warnings or errors)
 
